# Raytracer

./: .clang-tidy  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
include/image/: format.h  image.h  pixel.h
src/image/: format.cpp  image.cpp  pixel.cpp
